--- a/app/src/main/res/layout/row_posts.xml
+++ b/app/src/main/res/layout/row_posts.xml
@@ -6,12 +6,13 @@
     android:layout_gravity="center_horizontal"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="20dp"
-    app:cardElevation="3dp"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="7dp"
     app:contentPadding="5dp"
-    android:background="@drawable/rounded_rectangle"
-    app:cardUseCompatPadding="true"
-    android:layout_marginBottom="50dp"
+    android:layout_marginBottom="30dp"
+    android:foreground="?attr/selectableItemBackground"
+    android:clipToPadding="false"
+    android:clipChildren="false"
     >
 
     <LinearLayout
@@ -38,25 +39,38 @@
        <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
+           android:layout_marginTop="10dp"
                 android:orientation="horizontal">
            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
 
+
+
                <TextView
                    android:id="@+id/pDateTv"
+                   android:layout_alignParentRight="true"
+                   android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
-                   android:text="   Date   "
-                   android:layout_alignParentRight="true"
-                   android:gravity="center" >
-               </TextView>
+                   android:text="Date"
+                   android:background="@drawable/tag_event_background"
+                   android:paddingVertical="3dp"
+                   android:paddingHorizontal="15dp"
+                   android:layout_marginRight="10dp"
+
+                   android:textStyle="bold"
+                   android:textSize="13sp"
+                   android:letterSpacing="0.1"
+                   android:textColor="@android:color/white"
+                   />
 
                <TextView
                    android:id="@+id/pTitleTv"
                    android:layout_width="wrap_content"
                    android:text="Title Of Event"
                    android:textStyle="bold"
+                   android:textSize="17sp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp"
                    android:layout_height="wrap_content"
