--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -35,17 +35,17 @@
 -->
 
         <EditText
-            android:id="@+id/signup_email"
+            android:id="@+id/signup_name"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:hint="Email"
-            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXY@.Zabcdefghijklmnopqrstuvwxyz1234567890"
-            android:inputType="textFilter"
             android:textSize="14sp"
             android:singleLine="true"
+            android:hint="Name"
             android:background="@drawable/edittext_background"
             android:padding="12dp"
             android:layout_marginBottom="15dp"/>
+
+
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="300dp"
@@ -67,19 +67,52 @@
         </com.google.android.material.textfield.TextInputLayout>
 
 
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
 
+            android:layout_width="300dp"
+            android:layout_height="47dp"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:android="http://schemas.android.com/apk/res/android"
 
+            android:layout_marginBottom="15dp"
+            tools:context=".MainActivity">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="47dp"
+                android:background="@drawable/edittext_background"
+                app:boxStrokeWidth="0dp"
+                app:boxStrokeWidthFocused="0dp"
+
+                android:hint="Region"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
+                <AutoCompleteTextView
+                    android:layout_height="47dp"
+                    android:id="@+id/autocomplete_Tv"
+                    android:layout_width="match_parent"
+                    android:paddingTop="10dp"
+                    android:paddingLeft="50dp"
+                    android:inputType="none"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
         <EditText
-            android:id="@+id/signup_name"
+            android:id="@+id/signup_email"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:hint="Email"
+            android:digits="abcdefghijklmnopqrstuvwxyz1234567890@."
+            android:inputType="textFilter"
             android:textSize="14sp"
             android:singleLine="true"
-            android:hint="Name"
             android:background="@drawable/edittext_background"
             android:padding="12dp"
             android:layout_marginBottom="15dp"/>
+
+
+
+
 
         <EditText
             android:id="@+id/signup_age"
@@ -92,7 +125,7 @@
             android:background="@drawable/edittext_background"
             android:padding="12dp"
             android:layout_marginBottom="15dp"/>
-
+<!--
         <EditText
             android:id="@+id/signup_region"
             android:layout_width="300dp"
@@ -102,7 +135,7 @@
             android:hint="Region"
             android:background="@drawable/edittext_background"
             android:padding="12dp"
-            android:layout_marginBottom="15dp"/>
+            android:layout_marginBottom="15dp"/>-->
 
         <EditText
             android:id="@+id/signup_city"
@@ -114,6 +147,11 @@
             android:background="@drawable/edittext_background"
             android:padding="12dp"
             android:layout_marginBottom="12dp"/>
+
+
+<!--
+        Agree to terms and conditions
+-->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_marginBottom="12dp"
