--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".homepage.homeorganization.MapsFragment">
 
+
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
@@ -16,10 +17,13 @@
         android:id="@+id/searchView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:queryHint="Search here..."
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:iconifiedByDefault="false"
-        android:layout_centerHorizontal="true"/>
+        android:queryHint="Search here..." />
 
     <Button
         android:id="@+id/confirmButton"
