--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -67,10 +67,11 @@
         </com.google.android.material.textfield.TextInputLayout>
 
 
+        <!-- Start -->
         <androidx.coordinatorlayout.widget.CoordinatorLayout
 
             android:layout_width="300dp"
-            android:layout_height="47dp"
+            android:layout_height="50dp"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:android="http://schemas.android.com/apk/res/android"
 
@@ -79,7 +80,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="47dp"
+                android:layout_height="50dp"
                 android:background="@drawable/edittext_background"
                 app:boxStrokeWidth="0dp"
                 app:boxStrokeWidthFocused="0dp"
@@ -87,15 +88,18 @@
                 android:hint="Region"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                 <AutoCompleteTextView
-                    android:layout_height="47dp"
+                    android:layout_height="50dp"
                     android:id="@+id/autocomplete_Tv"
                     android:layout_width="match_parent"
-                    android:paddingTop="10dp"
+                    android:paddingTop="7dp"
                     android:paddingLeft="50dp"
                     android:inputType="none"
                     />
             </com.google.android.material.textfield.TextInputLayout>
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+        <!-- End -->
+
 
         <EditText
             android:id="@+id/signup_email"
