--- a/app/src/main/res/layout/activity_show_post.xml
+++ b/app/src/main/res/layout/activity_show_post.xml
@@ -17,7 +17,7 @@
         android:id="@+id/showImagePost"
         android:layout_width="match_parent"
         android:adjustViewBounds="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:scaleType="centerCrop"
         app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize20PercentShowPost"
         android:layout_height="250dp"
@@ -25,30 +25,104 @@
         android:background="@drawable/rounded_rectangle"/>
 
         <TextView
-            android:id="@+id/showNameOrg"
+            android:id="@+id/showPostTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="20dp"
             android:paddingBottom="10dp"
-            android:text="Organization Name"
+            android:text="Post Title"
             android:textColor="@android:color/black"
-            android:textSize="30sp"
+            android:textSize="28sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/showLocationAndDateAndTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
+            android:paddingBottom="5dp"
             android:text="Locatiom + Date + Start and end time"
             android:textColor="@android:color/black"
             android:textSize="14sp"
          />
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+
+
+
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/showPostProfileImg"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
+                    android:layout_centerHorizontal="true"
+                    android:src="@drawable/icon_account"
+                    android:layout_alignParentLeft="true"
+                    android:layout_toLeftOf="@id/showPostProfileImg"
+                    />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/randomTextDontCare"
+                    android:layout_width="wrap_content"
+                    android:text="By"
+                    android:textSize="11sp"
+                    android:gravity="center_vertical"
+                    android:textColor="@color/black"
+                    android:layout_marginLeft="25dp"
+                    android:layout_height="match_parent"
+                    >
+                </TextView>
+
+                    <TextView
+                        android:id="@+id/showNameOrg"
+                        android:layout_width="wrap_content"
+                        android:text="Organization Name"
+                        android:textSize="11sp"
+                        android:gravity="center_vertical"
+                        android:textColor="@color/black"
+                        android:layout_marginLeft="5dp"
+                        android:layout_height="match_parent"
+                        >
+                    </TextView>
+
+
+                </LinearLayout>
+            </RelativeLayout>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/showPostTimePosted"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="10dp"
+            android:layout_marginTop="5dp"
+            android:text="Post Time of post"
+            android:lineSpacingExtra="4sp"
+            android:textColor="@color/Gray"
+            android:textSize="10sp"
+            android:textStyle="bold"
+            />
+
+
+
+
+
         <TextView
             android:id="@+id/showDescreption"
             android:layout_width="wrap_content"
-            android:layout_height="130dp"
+            android:layout_height="110dp"
             android:paddingBottom="10dp"
             android:text="@string/descreption_dummy"
             android:lineSpacingExtra="4sp"
@@ -81,7 +155,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             android:orientation="horizontal">
             <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
