--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -126,6 +126,55 @@
     </LinearLayout>
 
 
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+
+            android:layout_marginBottom="15dp"
+            tools:context=".MainActivity">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@drawable/edittext_background"
+                app:boxStrokeWidth="0dp"
+                app:boxStrokeWidthFocused="0dp"
+
+                android:hint="###"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
+                <AutoCompleteTextView
+                    android:layout_height="50dp"
+                    android:id="@+id/autocomplete_Tv"
+                    android:layout_width="match_parent"
+                    android:paddingTop="7dp"
+                    android:paddingLeft="50dp"
+                    android:inputType="none"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+        <LinearLayout
+            android:id="@+id/hashtags_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
+            android:animateLayoutChanges="true"/>
+
+
+
+        <TextView
+            android:id="@+id/selected_hashtags_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:textColor="#000"
+            android:layout_marginTop="10dp" />
+
+
         <!---EditText: Input post description-->
         <EditText
             android:id = "@+id/pDescriptionEt"
