--- a/app/src/main/res/layout/activity_show_post.xml
+++ b/app/src/main/res/layout/activity_show_post.xml
@@ -139,8 +139,13 @@
             android:textColor="@android:color/black"
             android:textSize="20sp"
             />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
         <TextView
-            android:id="@+id/showTagLabel"
+            android:id="@+id/showTagLabel1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="#Environment"
@@ -152,6 +157,43 @@
             android:textColor="@android:color/white"
             android:textSize="11sp"
             />
+
+            <TextView
+                android:id="@+id/showTagLabel2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="#Environment"
+                android:background="@drawable/tag_event_background"
+                android:paddingVertical="10dp"
+                android:paddingHorizontal="15dp"
+                android:textStyle="bold"
+                android:letterSpacing="0.1"
+                android:layout_marginLeft="10dp"
+                android:textColor="@android:color/white"
+                android:textSize="11sp"
+                />
+
+            <TextView
+                android:id="@+id/showTagLabel3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="#Environment"
+                android:background="@drawable/tag_event_background"
+                android:paddingVertical="10dp"
+                android:paddingHorizontal="15dp"
+                android:textStyle="bold"
+                android:letterSpacing="0.1"
+                android:layout_marginLeft="10dp"
+                android:textColor="@android:color/white"
+                android:textSize="11sp"
+                />
+
+
+
+
+
+        </LinearLayout>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
