--- a/app/src/main/res/layout/bottom_navigation_activist.xml
+++ b/app/src/main/res/layout/bottom_navigation_activist.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_weight="5"
     android:elevation="7dp"
     android:orientation="vertical">
@@ -23,6 +24,8 @@
             android:layout_weight="0.7"
             android:src="@drawable/home"
             android:scaleType="centerInside"
+            app:tint="@color/lightGrayWatanNavIcons"
+
             android:padding="10dp"
             />
 
@@ -39,6 +42,8 @@
             android:layout_weight="0.7"
             android:src="@drawable/icon_search"
             android:scaleType="centerInside"
+            app:tint="@color/lightGrayWatanNavIcons"
+
             android:padding="10dp"
             />
 
@@ -48,7 +53,7 @@
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_weight="0.7"
-            android:tint="@color/black"
+            app:tint="@color/lightGrayWatanNavIcons"
             android:src="@drawable/icon_bell"
             android:scaleType="centerInside"
             android:padding="10dp"
@@ -76,6 +81,8 @@
             android:layout_weight="0.7"
             android:src="@drawable/user"
             android:scaleType="centerInside"
+            app:tint="@color/lightGrayWatanNavIcons"
+
             android:padding="10dp"
             android:background="@null"
             />
