--- a/app/src/main/res/layout/activity_show_post.xml
+++ b/app/src/main/res/layout/activity_show_post.xml
@@ -199,16 +199,15 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:orientation="horizontal">
-            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            <RelativeLayout
                 android:layout_width="match_parent"
-
                 android:layout_height="wrap_content" >
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_marginRight="10dp"
-                    android:layout_alignParentRight="true"
-                    >
+                    android:layout_alignParentRight="true">
 
                 <ImageView
                     android:id="@+id/likeBtn"
@@ -233,17 +232,34 @@
                 </ImageView>
                 </LinearLayout>
 
-                <Button
-                    android:id="@+id/attendBtn"
-                    android:layout_width="80dp"
-                    android:text="Attend"
-                    android:textSize="10sp"
-                    android:textColor="@color/black"
-                    android:layout_marginLeft="10dp"
-                    android:layout_height="50dp"
-                    android:layout_alignParentLeft="true"
-                    >
-                </Button>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <Button
+                        android:id="@+id/addToCalenderBtn"
+                        android:layout_width="90dp"
+                        android:layout_height="55dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_marginLeft="10dp"
+                        android:layout_weight="1"
+                        android:text="Add To Calender"
+                        android:textColor="@color/black"
+                        android:textSize="10sp"></Button>
+
+                    <Button
+                        android:id="@+id/attendBtn"
+                        android:layout_width="90dp"
+                        android:text="Attend"
+                        android:textSize="10sp"
+                        android:textColor="@color/black"
+                        android:layout_marginLeft="10dp"
+                        android:layout_height="55dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_weight = "1">
+                    </Button>
+
+                </LinearLayout>
             </RelativeLayout>
         </LinearLayout>
 
