--- a/app/src/main/res/layout/fragment_onboarding4.xml
+++ b/app/src/main/res/layout/fragment_onboarding4.xml
@@ -1,91 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OnboardingFragment4">
+    tools:context=".OnboardingFragment1">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <?xml version="1.0" encoding="utf-8"?>
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/gradient_background"
-        tools:context=".MainActivity">
+        tools:context=".StartEveryThing">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="1dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:gravity="center"
+            android:background="@drawable/gradient_background">
+
+
 
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginHorizontal="50dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                app:srcCompat="@drawable/onboard4" />
+                android:layout_height="189dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="30dp"
+                app:srcCompat="@drawable/img_3" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/welcomeTV"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Explore Acteen!"
-                android:textColor="@color/black"
-                android:textSize="32sp"
+                android:layout_height="50dp"
+                android:layout_marginBottom="10dp"
+                android:text="Get Started"
+                android:textColor="@android:color/black"
+                android:textSize="36sp"
                 android:textStyle="bold" />
 
+
             <TextView
-                android:id="@+id/textView1"
+                android:id="@+id/descriptionTV"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="30dp"
-                android:layout_marginTop="0dp"
-                android:text="Become a changemaker in your community!"
-                android:textAlignment="center"
-                android:textColor="@color/gray"
-                android:textSize="15sp" />
-
-            <ImageButton
-                android:background="@null"
-                android:id="@+id/nav_home"
-                android:layout_marginTop="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/pagination_4"
-                />
-
-
-
-
+                android:layout_height="20dp"
+                android:layout_margin="20dp"
+                android:layout_marginBottom="100dp"
+                android:text="Start posting your opportunities today!"
+                android:textColor="@android:color/darker_gray"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:orientation="horizontal">
+
+
+
 
                 <Button
-                    android:id="@+id/startButton"
-                    android:layout_width="300dp"
-                    android:layout_height="60dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginBottom="3dp"
-                    android:text="Let's Go" />
+                    android:id="@+id/NextBtn"
+                    android:layout_width="10dp"
+                    android:layout_height="wrap_content"
+                    android:text="Next"
+                    android:textAllCaps="false"
+                    android:background="@drawable/purple_frame"
+                    android:textColor="@android:color/black"
+                    android:layout_weight="1"
+                    android:layout_margin="10dp"/>
+
             </LinearLayout>
-
-
         </LinearLayout>
-
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
 </FrameLayout>
