--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="yellow">#FFFF00</color> <!-- RGB code for yellow -->
     <color name="white">#FFFFFFFF</color>
     <color name="lightGrayWatan">#E9E9E9</color>
     <color name="lightGrayWatanNavIcons">#C6C6C6</color>
@@ -18,7 +19,6 @@
     <color name="green">#00FF00</color>
     <color name="dark_green">#008000</color>
     <color name="button_background_color">#FF0000</color>
-    <color name="yellow">#FFFF00</color>
     <color name="fuchsia">#FF00FF</color>
     <color name="silver">#C0C0C0</color>
     <color name="gray">#808080</color>
