--- a/app/src/main/res/layout/activity_show_post.xml
+++ b/app/src/main/res/layout/activity_show_post.xml
@@ -40,6 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="5dp"
+            android:maxLines="1"
             android:text="Locatiom + Date + Start and end time"
             android:textColor="@android:color/black"
             android:textSize="14sp"
@@ -206,29 +207,24 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_alignParentRight="true">
+                    android:layout_marginLeft="110dp">
 
                 <ImageView
                     android:id="@+id/likeBtn"
-                    android:layout_width="40dp"
+                    android:layout_width="30dp"
+                    android:gravity="center_vertical"
                     android:layout_height="match_parent"
-                    android:src="@drawable/icon_account"
-                    android:gravity="center" >
+                    android:src="@drawable/icon_heart"
+                     >
                 </ImageView>
                 <ImageView
                     android:id="@+id/saveBtn"
-                    android:layout_width="40dp"
+                    android:layout_width="30dp"
+                    android:layout_marginLeft="5dp"
                     android:layout_height="match_parent"
-                    android:src="@drawable/icon_home"
-                    android:gravity="center" >
-                </ImageView>
-                <ImageView
-                    android:id="@+id/shareBtn"
-                    android:layout_width="40dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/icon_management"
-                    android:gravity="center" >
+                    android:gravity="center_vertical"
+                    android:src="@drawable/icon_save"
+                     >
                 </ImageView>
                 </LinearLayout>
 
@@ -243,11 +239,11 @@
                         android:layout_alignParentLeft="true"
                         android:layout_marginLeft="10dp"
                         android:layout_weight="1"
-                        android:text="Add To Calender"
+                        android:text="Attend"
                         android:textColor="@color/black"
                         android:textSize="10sp"></Button>
 
-                    <Button
+                   <!-- <Button
                         android:id="@+id/attendBtn"
                         android:layout_width="90dp"
                         android:text="Attend"
@@ -257,7 +253,7 @@
                         android:layout_height="55dp"
                         android:layout_alignParentLeft="true"
                         android:layout_weight = "1">
-                    </Button>
+                    </Button>-->
 
                 </LinearLayout>
             </RelativeLayout>
