--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,6 +13,8 @@
 
         <!-- Status bar color. -->
         <item name="android:statusBarColor">#F9DD39</item>
+        <item name="android:fontFamily">@font/nunito_font</item>
+
         <!-- Customize your theme here. -->
     </style>
 
