--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,6 +11,7 @@
 
         <!-- Status bar color. -->
         <item name="android:statusBarColor">#F9DD39</item>
+        <item name="android:fontFamily">@font/nunito_font</item>
         <!-- Customize your theme here. -->
     </style>
 
