--- a/app/src/main/res/layout/activity_search_activist.xml
+++ b/app/src/main/res/layout/activity_search_activist.xml
@@ -30,7 +30,7 @@
         android:src="@drawable/icon_account"
         />
 
-        <androidx.appcompat.widget.SearchView
+        <android.widget.SearchView
             android:layout_width="match_parent"
             android:id="@+id/simpleSearchView"
             app:strokeColor="@color/black"
@@ -119,7 +119,7 @@
                 android:layout_height="fill_parent" >
 
                 <com.google.android.material.imageview.ShapeableImageView
-                    android:id="@+id/flag"
+                    android:id="@+id/enviormentBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="250dp"
                     android:layout_alignParentLeft="true"
