--- a/app/src/main/res/layout/activity_start_every_thing.xml
+++ b/app/src/main/res/layout/activity_start_every_thing.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".StartEveryThing">
 
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -57,7 +63,7 @@
             android:layout_height="wrap_content"
             android:text="Activist"
             android:textAllCaps="false"
-
+            android:clickable="true"
             android:background="@drawable/yellow_frame"
             android:textColor="@android:color/black"
             android:layout_weight="1"
@@ -72,6 +78,7 @@
             android:textAllCaps="false"
             android:background="@drawable/yellow_frame"
             android:textColor="@android:color/black"
+            android:clickable="true"
             android:layout_weight="1"
             android:layout_margin="10dp"/>
 
