--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,7 @@
         <item name="android:textColorHint">@color/gray</item>
 
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">#F9DD39</item>
+        <item name="android:statusBarColor">@color/black</item>
         <item name="android:fontFamily">@font/nunito_font</item>
         <!-- Customize your theme here. -->
     </style>
